Optimize sliders style in index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <div class="carousel-caption">
-                <h1>A Simple and Easy to Use <br/> Questionnaire System</h1>
+                <h1>A Simple and Easy to Use Questionnaire System</h1>
                 <p>Make a survey, collect opinions, etc.</p>
             </div>
         </div>
