--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -14,7 +14,7 @@
 .carousel {
     height: 410px;
     margin-bottom: 60px;
-    background: url('../images/index_sliders_bg.jpg')
+    background: url('../images/index_sliders_bg.jpg') no-repeat center;
 }
 .carousel-caption {
     margin-bottom: 50px;
