--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -9,20 +9,16 @@
 </head>
 <body class="error-page">
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="title">
-                <h1>Oops!</h1>
-                <h2>404 Not Found</h2>
-                <div class="error-details">
-                    Sorry, an error has occurred. Requested page not found!
-                </div>
-                <div class="error-actions">
-                    <a href="/" class="btn btn-primary btn-lg">
-                        <span class="glyphicon glyphicon-home"></span> Take Me Home
-                    </a>
-                </div>
-            </div>
+    <div class="title">
+        <h1>Oops!</h1>
+        <h2>404 Not Found</h2>
+        <div class="error-details">
+            Sorry, an error has occurred. Requested page not found!
+        </div>
+        <div class="error-actions">
+            <a th:href="@{/}" href="../index.html" class="btn btn-primary btn-lg">
+                <span class="glyphicon glyphicon-home"></span> Take Me Home
+            </a>
         </div>
     </div>
 </div>
