--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" th:href="@{/favicon.ico}" href="../../static/favicon.ico"/>
     <title>404 - Not Found</title>
     <link type="text/css" th:href="@{/css/bootstrap-3.3.7.min.css}" href="../../static/css/bootstrap-3.3.7.min.css" rel="stylesheet"/>
     <link type="text/css" th:href="@{/css/app.css}" href="../../static/css/app.css" rel="stylesheet"/>
