--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -10,13 +10,13 @@
 </head>
 <body class="error-page">
 <div class="container">
-    <div class="title">
+    <div class="container-wrapper">
         <h1>Oops!</h1>
         <h2>404 Not Found</h2>
-        <div class="error-details">
+        <p>
             Sorry, an error has occurred. Requested page not found!
-        </div>
-        <div class="error-actions">
+        </p>
+        <div class="page-actions">
             <a th:href="@{/}" href="../index.html" class="btn btn-primary btn-lg">
                 <span class="glyphicon glyphicon-home"></span> Take Me Home
             </a>
