--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -90,6 +90,12 @@
     margin-left: 5px;
 }
 
+.input_text_has_error {
+    border-color: #a94442;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
 /* Responsive CSS
 -------------------------------------------------- */
 
