--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -45,6 +45,7 @@
 }
 
 /* questionnaire/view.html
+ * reply/view.html
 -------------------------------------------------- */
 
 .questionnaire-view-page {
@@ -94,6 +95,11 @@
     border-color: #a94442;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+fieldset[disabled] p.form-control {
+    height: auto;
+    cursor: auto;
 }
 
 /* Responsive CSS
