Change style name .questionnaire-view-page to .view-page

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -48,7 +48,7 @@
  * reply/view.html
 -------------------------------------------------- */
 
-.questionnaire-view-page {
+.view-page {
     background-color: #f0f0f0;
 }
 
