--- a/src/main/resources/templates/questionnaire/view.html
+++ b/src/main/resources/templates/questionnaire/view.html
@@ -14,7 +14,7 @@
     <!-- Custom styles for this template -->
     <link type="text/css" th:href="@{/css/app.css}" href="../../static/css/app.css" rel="stylesheet"/>
 </head>
-<body class="page questionnaire-view-page">
+<body class="page view-page">
 <!-- Navigation bar
     ================================================== -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
