--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a th:href="@{/}" href="index.html">Home</a></li>
-                <li><a href="#create">Create</a></li>
+                <li><a th:href="@{/create}" href="questionnaire/create.html">Create</a></li>
                 <li><a href="#mine">Mine</a></li>
                 <li><a th:href="@{/about}" href="about.html">About</a></li>
             </ul>
