--- a/src/main/resources/templates/questionnaire/view.html
+++ b/src/main/resources/templates/questionnaire/view.html
@@ -70,6 +70,12 @@
                          th:each="question,iter : ${questionnaire.questions}"
                          th:switch="${question.type.name()}"
                          th:classappend="${question.required}? 'required'">
+
+                        <!--/* This hidden input is used to make sure the item is uploaded to the server.
+                               So, every question has it's own ReplyFormItem */-->
+                        <input type="hidden" th:attr="name='items[' + ${iter.index} + '].sequenceNumber'"
+                               th:value="${question.sequenceNumber}"/>
+
                         <div>
                             <span class="question-index" th:text="${question.sequenceNumber + 1} + '.'">1.</span>
                             <span class="question-content" th:text="${question.content}">Student Number:</span>
